bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/Pricing_Condition__c.object-meta.xml
<CustomObject>
    <label>Pricing Condition</label>
    <nameField>
        <displayFormat>PrCond-{0000000}</displayFormat>
        <label>Pricing Condition No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>