bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/fields/L1_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>L1_Channel_Code__c</fullName>
    <label>L1 Channel Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>