bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/fields/Pricing_Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Condition_Value__c</fullName>
    <label>Pricing Condition Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>