bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/fields/Pricing_Condition_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Condition_Value_Type__c</fullName>
    <label>Pricing Condition Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>