bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product SKU</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Product_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Product SKU</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricing Conditions (Product SKU)</relationshipLabel>
    <relationshipName>Pricing_Conditions5</relationshipName>
    <type>Lookup</type>
</CustomField>