bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/validationRules/EUSFA_Price_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_Price_Non_Negative</fullName>
    <active>true</active>
    <description>Blocks save when Pricing Condition Value is negative. Allows null.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Pricing_Condition_Value__c)),
  Pricing_Condition_Value__c &lt; 0
)</errorConditionFormula>
    <errorMessage>Pricing Condition Value must be zero or a positive number.</errorMessage>
</ValidationRule>