bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/validationRules/EUSFA_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_Required_Fields</fullName>
    <active>true</active>
    <description>Blocks save when required fields are missing on Pricing Condition.</description>
    <errorConditionFormula>OR(
  ISPICKVAL(Market__c, &apos;&apos;),
  ISBLANK(L1_Channel_Code__c),
  ISBLANK(Product_SKU__c),
  ISBLANK(Valid_From__c),
  ISBLANK(Valid_To__c)
)</errorConditionFormula>
    <errorMessage>Required fields are missing. Please populate Market, L1 Channel Code, Product SKU, Valid From, and Valid To.</errorMessage>
</ValidationRule>