bundled_metadata/force-app/main/default/objects/Pricing_Condition__c/validationRules/EUSFA_Valid_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_Valid_Date_Range</fullName>
    <active>true</active>
    <description>Blocks save when Valid From is after Valid To.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Valid_From__c)),
  NOT(ISBLANK(Valid_To__c)),
  Valid_From__c &gt; Valid_To__c
)</errorConditionFormula>
    <errorMessage>Valid From date must be on or before Valid To date.</errorMessage>
</ValidationRule>